tdf#140308 Crash import old OpenOffice template

regression from
    commit cfe5a5044845a3fc90e3634e996edb4d85808d3c
    sfx2: use the fastparser API when possible

We end up using the OOo2OasisTransformer filter,
which is not fastparser compatible

Bisected with: bibisect-linux64-7.1

Change-Id: I7bd4191f098096034dc8ff368aba4b1ff313ce18